# webtoon-pd-tauri

./: README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.tauri.config.ts
src/: styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/sidecars/image-renderer/: .gitignore  image_renderer.py  pyproject.toml
src-tauri/src/: commands.rs  domain.rs  error.rs  files.rs  lib.rs  main.rs  remote.rs  sidecars.rs  workflow.rs  wysiwyg.rs
src/routes/: __root.tsx  index.tsx
src/tauri/: index.html  main.tsx
