[package]
name = "ziward-frontend-template"
version = "0.1.0"
description = "Ziward frontend template desktop shell"
authors = ["Ziward"]
edition = "2021"

[lib]
name = "ziward_frontend_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
